2011-06-16  Jason Merrill  <jason@redhat.com>

	PR c++/49229
	* pt.c (tsubst_decl) [FUNCTION_DECL]: Handle substitution failure.

	PR c++/49251
	* semantics.c (finish_id_expression): Mark even dependent
	variables as used.

2011-06-14  Jason Merrill  <jason@redhat.com>

	* error.c (type_to_string): Print typedef-stripped version too.

	PR c++/49117
	* call.c (perform_implicit_conversion_flags): Print source type as
	well as expression.

	PR c++/49369
	* class.c (build_base_path): Fix cv-quals in unevaluated context.

	PR c++/49290
	* semantics.c (cxx_eval_indirect_ref): Remove assert.

2011-06-09  Jason Merrill  <jason@redhat.com>

	* semantics.c (finish_compound_literal): Set TREE_HAS_CONSTRUCTOR.

2011-06-08  Jason Merrill  <jason@redhat.com>

	* semantics.c (potential_constant_expression_1): Handle destructor
	call.

2011-06-07  Jason Merrill  <jason@redhat.com>

	PR c++/48780
	* typeck.c (perform_integral_promotions): Don't promote scoped enums.
	* call.c (convert_arg_to_ellipsis): Promote them here in old ABI.

2011-06-06  Jason Merrill  <jason@redhat.com>

	PR c++/49298
	* semantics.c (potential_constant_expression_1): Handle FIELD_DECL.

	PR c++/49134
	* tree.c (build_target_expr): Deal with ARM ABI tweaks.

2011-06-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49276
	* mangle.c (write_nested_name): Use CP_DECL_CONTEXT instead of
	DECL_CONTEXT.

2011-05-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/49223
	* semantics.c (finish_omp_clauses): Call require_complete_type
	even for copyin/copyprivate clauses.  Only call
	cxx_omp_create_clause_info if inner_type is COMPLETE_TYPE_P.

2011-05-27  Jason Merrill  <jason@redhat.com>

	PR c++/47049
	* semantics.c (maybe_add_lambda_conv_op): Fix COMDAT sharing.
	* decl.c (start_preparsed_function): Don't call comdat_linkage for
	a template.

	PR c++/47277
	* parser.c (cp_parser_unqualified_id): Don't check
	constructor_name_p for enums.

	PR c++/48284
	* error.c (dump_expr) [COMPONENT_REF]: Use pp_cxx_dot